--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,4 +52,13 @@ body {
   .btn-disabled {
     @apply btn !bg-stone-300 !text-stone-500 !border-stone-300 hover:!bg-stone-300 hover:!border-stone-300 !cursor-not-allowed;
   }
+
+  .masonry {
+    column-count: 3;
+    @apply gap-x-4;
+  }
+
+  .masonry-item {
+    break-inside: avoid;
+  }
 }
