- improved responsiveness -added top menu navigation for desktop - fixed some dishes bugs

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -61,4 +61,21 @@ body {
   .masonry-item {
     break-inside: avoid;
   }
+
+  @keyframes singleBounce {
+    0%,
+    100% {
+      transform: translateY(-25%);
+      animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+    }
+    50% {
+      transform: none;
+      animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
+    }
+  }
+
+  .singleBounce:hover {
+    animation: singleBounce 1s;
+    animation-iteration-count: 1;
+  }
 }
