--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,10 +40,13 @@ body {
     @apply border rounded-lg px-4 py-2 active:ring-primary active:outline-primary focus:ring-primary focus:outline-primary;
   }
   .btn {
-    @apply rounded-xl px-4 py-2 bg-secondary  text-white hover:cursor-pointer transition-all shadow-lg border border-primary hover:from-green-700 hover:to-green-600 hover:border-secondary fade-in;
+    @apply rounded-xl px-4 py-2 bg-secondary text-white hover:cursor-pointer transition-all shadow-lg border border-secondary hover:from-green-700 hover:to-green-600 hover:border-secondary fade-in;
   }
   .btn-primary {
     @apply btn bg-gradient-radial from-green-600 to-green-500;
+  }
+  .btn-secondary {
+    @apply btn bg-white text-primary border-secondary;
   }
   .btn-danger {
     @apply btn !border-red-500 !bg-red-500 hover:!bg-red-700 hover:!border-red-700;
